@@ -1,3 +1,8 @@
+2003-11-18  Braden McDaniel  <braden@endoframe.com>
+
+	* src/libopenvrml-gl/openvrml/gl/viewer.cpp:  On second thought,
+	use boost::scoped_ptr to manage gl_capabilities singleton.
+
 2003-11-17  Braden McDaniel  <braden@endoframe.com>
 
 	* src/libopenvrml-gl/openvrml/gl/viewer.cpp:  Use
